# pytorch_EM

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/pytorch_test/: __main__.py  em_runner.py  em_strategies.py  pytorch_test.py
tests/: test_pytorch_test.py
tests/test_data/: G_of_R_list.txt  L1.aa.aln.bam.0.pk2
