[metadata]
name = pytorch_test
description = pytorch_test
author = Alex Drong
license = Proprietary
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Private :: Do not Upload

[options]
packages =
    pytorch_test
install_requires =
    pandas >= 1.5
    biopython >= 1.8
    torch >= 1.13
    scipy >= 1.10
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
    testing =
        flake8 == 6.0
        tox == 3.27.1
        pytest == 7.2
        pytest-cov == 4.0.0
        mypy == 0.991

[options.entry_points]
console_scripts =
    pytorch_test = pytorch_test.pytorch_test:main

[options.package_data]
pytorch_test = py.typed

[flake8]
max-line-length = 160
